completed the order handler
